Added controllers for auth, comments, ticketHistory. Added middleware for requiredRole, sessionAuth, validateAuth, validateComments. Finished Routes. Added GitHub OAuth and local auth
